# mini-async-log-c

./: .gitignore  .gitmodules  LICENSE  config.h.in  meson.build  meson_options.txt  readme.md  test-all-variants.sh
.github/workflows/: linux_ci.yml  windows_ci.yml
dependencies/: README.txt  prepare_dependencies.sh  recompile_base_library.sh
eclipse/malc/: .cproject  .project  dependencies
example/src/: benchmark.c  cpp-custom-destination.cpp  cpp-wrapper.cpp  hello-malc.c  overview.c  stress-test.c  thread_local_storage.c
example/src/c++11/: custom-destination.cpp  custom-type.cpp  hello-malcpp.cpp  overview.cpp  stress-test.cpp  wrapper.cpp
example/src/c11/: hello-malc.c  overview.c  stress-test.c  thread_local_storage.c
example/src/malc/: hello-malc.c  overview.c  stress-test.c  thread_local_storage.c
example/src/malcpp/: custom-allocators.cpp  custom-destination.cpp  custom-type.cpp  hello-malcpp.cpp  overview.cpp  stress-test.cpp
include/malc/: c++_std_types.hpp  cfg.h  common.h  config.h  cpp_destination_adapter.hpp  custom_type.hpp  destination.h  destinations.hpp  libexport.h  log_macros.h  malc.h  malc.hpp  malc_lean.hpp
include/malc/destinations/: array.h  destinations.hpp  file.h  stdouterr.h
include/malc/impl/: c++11.hpp  c++11_basic_types.hpp  c++11_std_types.hpp  c11.h  common.h  compile_time_validation.hpp  logging.h  malc_base.hpp  malc_private.h  metaprogramming_common.hpp  serialization.h  serialization.hpp  serializer.h
include/malc/impl/cpp11/: cpp11.hpp
include/malc/impl/macro/: c11.h  cpp.hpp  malc_macro.h
include/malcpp/: custom_type.hpp  destinations.hpp  malcpp.hpp  malcpp_lean.hpp
include/malcpp/impl/: c++11.hpp  c++11_basic_types.hpp  c++11_std_types.hpp  compile_time_validation.hpp  malc_base.hpp  metaprogramming_common.hpp  serialization.hpp
scripts/: malc-overview-date-converter.sh  malcpp11-fmtstr-test.sh
smoke_test/src/malc/: smoke.c
smoke_test/src/malcpp/: smoke.cpp
src/malc/: backend.h  bounded_buffer.c  bounded_buffer.h  destinations.c  destinations.h  entry_parser.c  entry_parser.h  log_entry.h  log_strings.h  malc.c  memory.c  memory.h  proof_of_concept_main.c  serialization.c  serialization.h  stack_args.h  tls_buffer.c  tls_buffer.h
src/malc/cpp-wrapper/: c++_std_types.cpp  custom_type.cpp  destinations.cpp  malcpp-e-c-d.cpp  malcpp-e-c-nd.cpp  malcpp-e-nc-d.cpp  malcpp-e-nc-nd.cpp  malcpp-ne-nc-d.cpp  malcpp-ne-nc-nd.cpp  malcpp.hpp  wrapper.cpp
src/malc/destinations/: array.c  file.c  stdouterr.c
src/malcpp/: c++_std_types.cpp  custom_type.cpp  destinations.cpp  malcpp-e-c-d.cpp  malcpp-e-c-nd.cpp  malcpp-e-nc-d.cpp  malcpp-e-nc-nd.cpp  malcpp-ne-nc-d.cpp  malcpp-ne-nc-nd.cpp  malcpp-template.hpp  wrapper.cpp
subprojects/: cmocka.wrap
test/src/malc/: alltypes.h  array_destination_test.c  bounded_buffer_test.c  destinations_test.c  entry_parser_test.c  file_destination_test.c  interface_test.c  serialization_test.c  test_allocator.h  tests_main.c  tls_buffer_test.c
test/src/malc-smoke/: smoke.c
test/src/malcpp/: log_entry_validator.cpp  log_entry_validator_c++_types.cpp  tests_main.cpp
test/src/malcpp-smoke/: smoke.cpp
test/src/malcpp/compile-time/: fail_bad_float_modifiers.cpp  fail_bad_int_modifiers.cpp  fail_excess_arguments_1.cpp  fail_excess_arguments_2.cpp  fail_excess_arguments_3.cpp  fail_excess_placeholders_1.cpp  fail_excess_placeholders_2.cpp  fail_excess_placeholders_3.cpp  fail_missing_refdtor.cpp  fail_unescaped_brace_1.cpp  fail_unescaped_brace_2.cpp  pass_same_argcount.cpp  validation_test_boilerplate.hpp
