option(
    'pic_statlibs',
     type        : 'boolean',
     value       : false,
     description : 'Compile static libraries with -fPIC (pos independent)'
     )
option(
    'sharedlib',
     type        : 'boolean',
     value       : false,
     description : 'compile as shared libraries'
     )
option(
    'no_compressed_builtins',
     type        : 'boolean',
     value       : false,
     description : 'builtin types are never trailing-zero compressed'
     )
