option(
    'pic_statlibs',
     type        : 'boolean',
     value       : false,
     description : 'Compile static libraries with -fPIC (pos independent)'
     )
option(
    'sharedlib',
     type        : 'boolean',
     value       : false,
     description : 'compile as shared libraries'
     )
option(
    'bare',
     type        : 'boolean',
     value       : false,
     description : 'No extra content compilation (tests, examples, etc...)'
     )
option(
    'no_compressed_builtins',
     type        : 'boolean',
     value       : false,
     description : 'builtin types (32 and 64 bit) are never trailing-zero compressed'
     )
option(
    'no_compressed_ptrs',
     type        : 'boolean',
     value       : false,
     description : 'pointers are never trailing zero compressed (recommended on 32 bit systems)'
     )